--- a/notebooks/multi_rec_analysis.ipynb
+++ b/notebooks/multi_rec_analysis.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyse and Compare Multiple Patch-Clamp Recordings "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ignored folder:  data\n"
+     ]
+    }
+   ],
    "source": [
     "folder_path = r'C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2'\n",
     "folder_path_x = r'C:\\Users\\jl5675\\Desktop\\Noah\\data\\tere_sept\\9'\n",
@@ -32,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,27 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(patchdata['rec1_cell1']['voltage'].loc[7])\n",
+    "plt.plot(patchdata1['rec1_cell1']['voltage'].loc[7])\n",
     "# plt.plot(patchdata['rec4_holding_cell1']['voltage'].loc[15])\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "patchdata.loc['metadata'].xx3_cell1"
+    "# patchdata1.loc['metadata'].xx3_cell1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,17 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_long_V1 = patchdata1.loc['voltage', 'rec4_holding_cell1'].values[17]\n",
-    "data_long_V2 = patchdata2.loc['voltage', rec_name2].values[11]\n",
+    "data_long_V2 = patchdata2.loc['voltage', rec_name2].values[10]\n",
     "\n",
     "# data_long_I = data_current.values.flatten()\n",
     "resolution = 10\n",
     "import numpy as np\n",
-    "x_axis_long = np.linspace(0, len(data_long_V) / resolution, len(data_long_V)) \n",
+    "x_axis_long = np.linspace(0, len(data_long_V1) / resolution, len(data_long_V1)) \n",
     "\n",
     "# First subplot\n",
     "plt.plot(x_axis_long, data_long_V1, color='b', linestyle='-', label = 'DIV 16')\n",
@@ -125,9 +140,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rec1_cell1\n",
+      "rec2_cell1\n",
+      "rec3_cell1\n",
+      "rec4_cell1\n",
+      "rec4_holding_cell1\n"
+     ]
+    }
+   ],
    "source": [
     "excitabilities = []\n",
     "peaks_list = []\n",
@@ -140,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100ms11mw_cell1\n",
+      "10ms6mw_cell1\n",
+      "1ms12mw_cell1\n",
+      "300ms9mw2_cell1\n"
+     ]
+    }
+   ],
    "source": [
     "excitabilities2 = []\n",
     "peaks_list2 = []\n",
@@ -155,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,18 +203,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[np.float64(-0.6103509999999943), np.float64(-1.8310549999999992)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "excitabilities_filtered2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jl5675\\AppData\\Local\\Temp\\ipykernel_2844\\1188348578.py:5: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "  ax.boxplot([excitabilities_filtered, excitabilities_filtered2], labels=['DIV 16', 'DIV 25'])\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -226,9 +284,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'voltsF' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(voltsF)\n\u001b[0;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(peaks, voltsF[peaks], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mxr\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mshow()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'voltsF' is not defined"
+     ]
+    }
+   ],
    "source": [
     "plt.plot(voltsF)\n",
     "plt.plot(peaks, voltsF[peaks], \"xr\")\n",
@@ -237,9 +307,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'patchdata' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m current \u001b[38;5;241m=\u001b[39m patchdata\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrec1_cell1\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      2\u001b[0m currnp \u001b[38;5;241m=\u001b[39m current\u001b[38;5;241m.\u001b[39mvalues\n\u001b[0;32m      3\u001b[0m currentF \u001b[38;5;241m=\u001b[39m currnp\u001b[38;5;241m.\u001b[39mflatten()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'patchdata' is not defined"
+     ]
+    }
+   ],
    "source": [
     "current = patchdata.loc['current', 'rec1_cell1']\n",
     "currnp = current.values\n",
@@ -250,9 +332,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'peaks' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# find current at initial peak index\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m index_peak \u001b[38;5;241m=\u001b[39m peaks[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m      4\u001b[0m current_at_peak \u001b[38;5;241m=\u001b[39m currentF[peaks[\u001b[38;5;241m0\u001b[39m]]\n\u001b[0;32m      5\u001b[0m default_current \u001b[38;5;241m=\u001b[39m currentF[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'peaks' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# find current at initial peak index\n",
     "\n",
